--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start": "react-scripts start",
+   "test": "react-scripts test",
+   "eject": "react-scripts eject"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.5",
