--- a/package.json
+++ b/package.json
@@ -6,10 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview",
-    "start": "react-scripts start",
-   "test": "react-scripts test",
-   "eject": "react-scripts eject"
+    "preview": "vite preview"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.5",
